--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -7,31 +7,11 @@
 
 <!-- Favicon -->
 <link rel="shortcut icon" href="favicon.ico">
-
-<!-- Web Fonts -->
-<link rel='stylesheet' type='text/css' href='//fonts.googleapis.com/css?family=Open+Sans:400,300,600&amp;subset=cyrillic,latin'>
-
 <!-- CSS Global Compulsory -->
-<link rel="stylesheet" href="/static/plugins/bootstrap/css/bootstrap.min.css">
-<link rel="stylesheet" href="/static/css/one.style.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" integrity="sha512-dTfge/zgoMYpP7QbHy4gWMEGsbsdZeCXz7irItjcC3sPUFtf0kuFbDz/ixG7ArTxmDjLXDmezHubeNikyKGVyQ==" crossorigin="anonymous">
+<link rel="stylesheet" href="/static/css-dist/bundle.min.css">
 
-<!-- CSS Footer -->
-<link rel="stylesheet" href="/static/css/footers/footer-v7.css">
 
-<!-- CSS Implementing Plugins -->
-<link rel="stylesheet" href="/static/plugins/animate.css">
-<link rel="stylesheet" href="/static/plugins/line-icons/line-icons.css">
-<link rel="stylesheet" href="/static/plugins/font-awesome/css/font-awesome.min.css">
-<link rel="stylesheet" href="/static/plugins/pace/pace-flash.css">
-<link rel="stylesheet" href="/static/plugins/owl-carousel/owl.carousel.css">
-<link rel="stylesheet" href="/static/plugins/cube-portfolio/cubeportfolio/css/cubeportfolio.min.css">
-<link rel="stylesheet" href="/static/plugins/cube-portfolio/cubeportfolio/custom/custom-cubeportfolio.css">
 <link rel="stylesheet" href="/static/plugins/revolution-slider/rs-plugin/css/settings.css" type="text/css" media="screen">
+<link rel="stylesheet" href="/static/plugins/font-awesome/css/font-awesome.min.css">
 <!--[if lt IE 9]><link rel="stylesheet" href="/static/plugins/revolution-slider/rs-plugin/css/settings-ie8.css" type="text/css" media="screen"><![endif]-->
-
-<!-- CSS Customization -->
-<link rel="stylesheet" href="/static/css/custom.css">
-
-
-<link rel="stylesheet" href="/static/css/headers/header-default.css">
-<link rel="stylesheet" href="/static/css/footers/footer-default.css">
