set up js files

--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -13,30 +13,21 @@
 <!-- End Contact Section -->
 
 <!-- JS Global Compulsory -->
-<script type="text/javascript" src="/static/plugins/jquery/jquery.min.js"></script>
-<script type="text/javascript" src="/static/plugins/jquery/jquery-migrate.min.js"></script>
-<script type="text/javascript" src="/static/plugins/bootstrap/js/bootstrap.min.js"></script>
-<!-- JS Implementing Plugins -->
-<script type="text/javascript" src="/static/plugins/smoothScroll.js"></script>
-<script type="text/javascript" src="/static/plugins/jquery.easing.min.js"></script>
-<script type="text/javascript" src="/static/plugins/pace/pace.min.js"></script>
-<script type="text/javascript" src="/static/plugins/jquery.parallax.js"></script>
-<script type="text/javascript" src="/static/plugins/counter/waypoints.min.js"></script>
-<script type="text/javascript" src="/static/plugins/counter/jquery.counterup.min.js"></script>
-<script type="text/javascript" src="/static/plugins/owl-carousel/owl.carousel.js"></script>
-<script type="text/javascript" src="/static/plugins/sky-forms-pro/skyforms/js/jquery.form.min.js"></script>
-<script type="text/javascript" src="/static/plugins/sky-forms-pro/skyforms/js/jquery.validate.min.js"></script>
-<script type="text/javascript" src="/static/plugins/revolution-slider/rs-plugin/js/jquery.themepunch.tools.min.js"></script>
-<script type="text/javascript" src="/static/plugins/revolution-slider/rs-plugin/js/jquery.themepunch.revolution.min.js"></script>
-<script type="text/javascript" src="/static/plugins/cube-portfolio/cubeportfolio/js/jquery.cubeportfolio.min.js"></script>
+<script type="text/javascript" src="/static/globaljs/jquery.min.js"></script>
+<script type="text/javascript" src="/static/globaljs/jquery-migrate.min.js"></script>
+<script type="text/javascript" src="/static/globaljs/bootstrap.min.js"></script>
+
+<script type="text/javascript" src="/static/javascripts-dist/bundle.min.js"></script>
+
 <!-- JS Page Level-->
-<script type="text/javascript" src="/static/js/one.app.js"></script>
-<script type="text/javascript" src="/static/js/forms/login.js"></script>
-<script type="text/javascript" src="/static/js/forms/contact.js"></script>
-<script type="text/javascript" src="/static/js/plugins/pace-loader.js"></script>
-<script type="text/javascript" src="/static/js/plugins/owl-carousel.js"></script>
-<script type="text/javascript" src="/static/js/plugins/revolution-slider.js"></script>
-<script type="text/javascript" src="/static/js/plugins/cube-portfolio/cube-portfolio-lightbox.js"></script>
+<script type="text/javascript" src="/static/javascripts_page/one.app.js"></script>
+<script type="text/javascript" src="/static/javascripts_page/login.js"></script>
+<script type="text/javascript" src="/static/javascripts_page/contact.js"></script>
+<script type="text/javascript" src="/static/javascripts_page/pace-loader.js"></script>
+<script type="text/javascript" src="/static/javascripts_page/owl-carousel.js"></script>
+<script type="text/javascript" src="/static/javascripts_page/revolution-slider.js"></script>
+<script type="text/javascript" src="/static/javascripts_page/cube-portfolio-lightbox.js"></script>
+
 <script type="text/javascript">
 jQuery(document).ready(function() {
     App.init();
@@ -48,6 +39,7 @@ jQuery(document).ready(function() {
     RevolutionSlider.initRSfullScreen();
 });
 </script>
+
 <!--[if lt IE 9]>
 <script src="/static/plugins/respond.js"></script>
 <script src="/static/plugins/html5shiv.js"></script>
