--- a/views/partials/coursePage/courseService.ejs
+++ b/views/partials/coursePage/courseService.ejs
@@ -151,9 +151,8 @@
     </div><!--/container-->
 
     <!-- JS Global Compulsory -->
-    <script type="text/javascript" src="/static/globaljs/jquery.min.js"></script>
-    <script type="text/javascript" src="/static/globaljs/jquery-migrate.min.js"></script>
-    <script type="text/javascript" src="/static/globaljs/bootstrap.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>">
     <!-- JS Implementing Plugins -->
     <script type="text/javascript" src="/static/javascripts_page/revolution-slider.js"></script>
     <script type="text/javascript">
