--- a/views/index.ejs
+++ b/views/index.ejs
@@ -35,9 +35,10 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <!--  End of Team Section -->
 
     <!-- Barcode Section -->
-    <% include ./partials/barcode%>        
+    <% include ./partials/barcode%>
     <!--  End of Barcode Section -->
 
     <% include ./partials/footer%>
+    <script src="//localhost:35729/livereload.js"></script>
 </body>
 </html>
