change data json login half way done

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -9,7 +9,7 @@
                 <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="/">
                 <span>T</span>FT
                 <!-- <img src="/static/img/logo1.png" alt="Logo"> -->
             </a>
