--- a/views/partials/intro.ejs
+++ b/views/partials/intro.ejs
@@ -32,7 +32,7 @@
                                 data-captionhidden="off"
                                 style="z-index: 6">
                                 <%= courses[i].brief %><br>
-                                Thirsty For Thirty
+                                <%= courses[i].banner %>
                             </div>
                             <!-- LAYER -->
                             <div class="tp-caption rs-caption-3 sft"
