--- a/views/partials/features.ejs
+++ b/views/partials/features.ejs
@@ -32,7 +32,7 @@
                                     <i class="icon-custom rounded-x icon-bg-dark fa fa-bolt"></i>
                                     <div class="content-boxes-in-v3">
                                         <h2 class="heading-sm">学员反馈</h2>
-                                        <p class="character">Speakup在两年时间内已经培训超过千名学员，收到许多让我们欣喜和感动的反馈。</p>
+                                        <p class="character">Speakup在两年时间内已经培训近万名学员，收到许多让我们欣喜和感动的反馈。</p>
                                     </div>
                                 </div>
                             </div>
@@ -41,4 +41,3 @@
                 </div>
             </section>
             <!--  End of Features Section -->
-        
