--- a/views/partials/service.ejs
+++ b/views/partials/service.ejs
@@ -12,7 +12,7 @@
                         <div class="service-block service-block-default">
                             <i class="icon-custom icon-lg icon-bg-u rounded-x fa fa-lightbulb-o"></i>
                             <h2 class="heading-md"><a href="/course/<%= courses[i].id %>"> <%= courses[i].name %></a></h2>
-                            <p><%= courses[i].brief %></p>
+                            <p><%= courses[i].banner %></p>
                         </div>
                     </div>
                 <%} %>
