--- a/views/partials/team.ejs
+++ b/views/partials/team.ejs
@@ -8,7 +8,7 @@
                             <% for(var i=0; i<lecturers.length; i++) {%>
                                 <li class="col-sm-3 col-xs-6 md-margin-bottom-30">
                                     <div class="team-img">
-                                        <img class="img-responsive" style="width: 215px; height: 215px; max-height:215px;max-width:215px;" src="<%= lecturers[i].picture %>"" alt="/static/img/team/img5-md.jpg" width="275" height="275">
+                                        <img class="img-responsive" style="width: 260px; height: 270px; max-height: 270px; max-width: 260px;" src="<%= lecturers[i].picture %>"" alt="/images-list/barcode.jpg" width="260" height="270">
                                         <!-- <ul>
                                             <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-twitter"></i></a></li>
                                             <li><a href="#"><i class="icon-custom icon-sm rounded-x fa fa-facebook"></i></a></li>
