--- a/views/course.ejs
+++ b/views/course.ejs
@@ -5,6 +5,17 @@
 <head>
     <title> <%= title %> </title>
     <% include ./partials/head %>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="/static/javascripts-dist/bundle.min.js"></script>
+    <!-- JS Implementing Plugins -->
+    <script type="text/javascript" src="/static/javascripts_page/revolution-slider.js"></script>
+    <script type="text/javascript">
+        jQuery(document).ready(function() {
+            CourseRevolutionSlider.initHalfRSfullScreen();
+        });
+    </script>
+
 </head>
 
 <!--
@@ -38,6 +49,6 @@ The data-spy and data-target are part of the built-in Bootstrap scrollspy functi
     <% include ./partials/barcode%>
     <!--  End of Barcode Section -->
     <% include ./partials/footer%>
-    
+
 </body>
 </html>
