--- a/views/partials/barcode.ejs
+++ b/views/partials/barcode.ejs
@@ -1,10 +1,10 @@
 <section id="barcode" class="contacts-section">
    <div class="container content-lg">
        <div class="title-v1">
-           <h2>扫一扫</h2>
-           <p>请关注功勋老师的留学分享微信订阅号（微信扫描下方的二维码）</p>
+           <h2>课程表</h2>
+           <p></p>
            <p>
-               <img src="/images-dist/barcode.jpg" style="max-height: 25%; max-width:25%;">
+               <img src="/images-dist/schedule.jpg" style="max-height: 50%; max-width:50%;">
            </p>
        </div>
    </div>
