--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -38,7 +38,7 @@
 
                     <!-- Barcode Block -->
                     <li class="page-scroll">
-                        <a href="/#barcode">扫一扫</a>
+                        <a href="/#barcode">课程表</a>
                     </li>
                     <!-- End Barcode Block -->
                     <!--
